<resources>
    <string name="app_name">Splunk RUM Sample App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="jcompose">Jetpack Compose Example</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="crash">Crash</string>
    <string name="email_question">It looks like you\'re trying to send an email. Can I help with that?</string>
    <string name="cancel">NO!</string>
    <string name="clippy">clippy</string>
    <string name="http_me_up">HTTP me up!</string>
    <string name="http_me_bad">Http Error</string>
    <string name="volley_client">Volley HTTP</string>
    <string name="worker">Worker</string>
    <string name="custom_event">Custom Event</string>
    <string name="http_not_found">HTTP Not Found</string>

    <string name="local_web_view">Local WebView</string>
    <string name="web_view">WebView</string>
    <string name="start_spam">Spam start!</string>
    <string name="stop_spam">Spam stop</string>
    <plurals name="spam_status">
        <item quantity="one">Created %d span</item>
        <item quantity="other">Created %d spans</item>
    </plurals>
    <string name="freeze">Freeze!</string>
    <string name="work_it">Work it!</string>
    <string name="custom_tab">Chrome</string>
    <string name="second_fragment">second fragment</string>
    <string name="draw_slowly">Draw Slowly</string>
    <string name="draw_speed_normally">Draw Normally</string>
    <string name="draw_speed_slowly">Draw Slowly</string>
    <string name="send_email">send email</string>
    <string name="title_activity_jetpack_compose">JetpackComposeActivity</string>
    <string name="reflection_based_exception">Reflection-based Exception</string>
    <string name="deep_inheritance_exception">Deep Inheritance Exception</string>
    <string name="method_inlining_exception">Method Inlining Exception</string>
    <string name="crash_test_fragment_b">Crash Test Fragment B</string>
    <string name="out_of_memory_error">Out Of Memory Error</string>
    <string name="method_overloading_exception">Method Overloading Exception</string>
    <string name="open_crash_test">Open Crash Test</string>
    <string name="chained_exception">Chained Exception</string>
    <string name="simple_crash">Simple Crash</string>
    <string name="synthetic_code_lambda_exception">Synthetic Code (Lambda) Exception</string>
    <string name="crash_test_fragment_a">Crash Test Fragment A</string>
    <string name="race_condition_exception">Race Condition Exception</string>
    <string name="anr">Trigger ANR</string>
    <string name="go_to_crash_test_fragment_b">Go to Crash Test Fragment B</string>
</resources>